remove task in modal

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -307,7 +307,7 @@ float: left;
     position: relative;
     min-height: 500px;
     width: auto;
-    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
     border-top-left-radius: 10px;
 }
 
