--- a/views/default/board.html
+++ b/views/default/board.html
@@ -7,9 +7,10 @@
         changeAjaxItens : '{{=URL("board_ajax_tasks")}}',
         removeTask : '{{=URL("remove_itens")}}',
         edit_owner_task : '{{=URL("_edit_owner_task")}}',
-        team_project : '{{=URL(r=request,f="call",args=["json","_team_project"], vars={"project_id": request.args(0)})}}',
         team_page : '{{=URL(f="team",args=[request.args(0)])}}',
+        team_project : '{{=URL(r=request,f="call",args=["json","_team_project"], vars={"project_id": request.args(0)})}}',
         card_modal : '{{=URL(r=request,f="call",args=["json","_card_modal"])}}',
+        card_comments : '{{=URL(r=request,f="call",args=["json","_card_comments"])}}',
     },
     msg = {
         field_empty : '{{=T("Click to write")}}',
@@ -31,6 +32,13 @@
         attachments : '{{=T("Attachments")}}',
         labels : '{{=T("Labels")}}',
         delete_card : '{{=T("Delete")}}',
+        type_message : '{{=T("Type your message")}}',
+    },
+    button = {
+        comment : '{{=T("Comment")}}',
+    },
+    project_data = {
+        project_id : '{{=project.id}}',
     },
     date = {
         sprint_started : '{{=sprint.started}}',
