--- a/views/default/board.html
+++ b/views/default/board.html
@@ -11,6 +11,7 @@
         team_project : '{{=URL(r=request,f="call",args=["json","_team_project"], vars={"project_id": request.args(0)})}}',
         card_modal : '{{=URL(r=request,f="call",args=["json","_card_modal"])}}',
         card_comments : '{{=URL(r=request,f="call",args=["json","_card_comments"])}}',
+        update_task_date : '{{=URL(r=request,f="call",args=["json","_update_task_date"])}}',
     },
     msg = {
         field_empty : '{{=T("Click to write")}}',
