--- a/views/default/board.html
+++ b/views/default/board.html
@@ -37,6 +37,8 @@
     },
     button = {
         comment : '{{=T("Comment")}}',
+        edit : '{{=T("Edit")}}',
+        delete : '{{=T("Delete")}}',
     },
     project_data = {
         project_id : '{{=project.id}}',
