--- a/views/default/board.html
+++ b/views/default/board.html
@@ -10,7 +10,7 @@
         team_page : '{{=URL(f="team",args=[request.args(0)])}}',
         team_project : '{{=URL(r=request,f="call",args=["json","_team_project"], vars={"project_id": request.args(0)})}}',
         card_modal : '{{=URL(r=request,f="call",args=["json","_card_modal"])}}',
-        card_comments : '{{=URL(r=request,f="call",args=["json","_card_comments"])}}',
+        card_new_comment : '{{=URL(r=request,f="call",args=["json","_card_new_comment"])}}',
         update_task_date : '{{=URL(r=request,f="call",args=["json","_update_task_date"])}}',
     },
     msg = {
